--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">NationalParks</string>
+    <string name="home">Home</string>
+    <string name="explore">Explore</string>
+    <string name="articles">Articles</string>
+    <string name="saved">Saved</string>
+    <string name="profile">Profile</string>
 </resources>
